RESOLVED FIXED169533
[GTK] Unbreak build with GTK+ >=3.20 after r213772
https://bugs.webkit.org/show_bug.cgi?id=169533
Summary [GTK] Unbreak build with GTK+ >=3.20 after r213772
Adrian Perez
Reported 2017-03-12 16:22:28 PDT
The EWS didn't catch the build failure because we use use GTK+ 3.16 in the Jhbuild. After submitting the patch for bug #169526 I made a build with the system's GTK+ and found this build failure: Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:571:49: error: cannot convert ‘GtkFileChooserNative* {aka _GtkFileChooserNative*}’ to ‘GtkNativeDialog* {aka _GtkNativeDialog*}’ for argument ‘1’ to ‘void gtk_native_dialog_set_modal(GtkNativeDialog*, gboolean)’ gtk_native_dialog_set_modal(dialog, TRUE); ^ The fix is straightforward and involves only adding a missing cast, I'm uploading a patch.
Attachments
Patch (1.75 KB, patch)
2017-03-12 16:23 PDT, Adrian Perez
mcatanzaro: review+
mcatanzaro: commit-queue+
Adrian Perez
Comment 1 2017-03-12 16:23:56 PDT
WebKit Commit Bot
Comment 2 2017-03-12 16:24:52 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 3 2017-03-12 17:34:44 PDT
Note You need to log in before you can comment on or make changes to this bug.