[GTK] Unbreak build with GTK+ >=3.20 after r213772 https://bugs.webkit.org/show_bug.cgi?id=169533

Patch by Adrian Perez de Castro <aperez@igalia.com> on 2017-03-12
Reviewed by Michael Catanzaro.

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkitWebViewRunFileChooser): Add missing cast.

Canonical link: https://commits.webkit.org/186523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213776 268f45cc-cd09-0410-ab3c-d52691b4dbfc